# serverlist-bot

./: Cargo.toml
src/: helpers.rs  main.rs
