[package]
name = "serverlist-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/kangalioo/poise", branch = "master" }
serde = "1.0.117"
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.79"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid", "bigdecimal", "json"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde_repr = "0.1.7"
rand = "0.8.5"
thiserror = "1.0"

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt", "sync", "time", "rt-multi-thread"]